학습계획서 업데이트

--- a/work/IMP_001.html
+++ b/work/IMP_001.html
@@ -228,7 +228,7 @@
                             <input type="radio" id="agree-o" name="agree7" value="5">
                             <label for="agree-o">전남</label>
                         </div>
-                        <div class="radio-box">
+                        <div class="box">
                             <input type="radio" id="agree-p" name="agree7" value="5">
                             <label for="agree-p">경북</label>
                         </div>
