--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -438,7 +438,7 @@
                         <div class="chk-box">
                             <input type="checkbox" id="5">
                             <label for="5">기타</label>
-                            <input type="text">
+                            <input type="text" class="fixed-value">
                         </div>
                     </div>
                     <p class="layer-agree-header">2) 학력 취득 목적 외 교육 선택한 경우(중복 선택 가능)</p>
@@ -500,7 +500,7 @@
                         <div class="chk-box">
                             <input type="checkbox" id="18">
                             <label for="18">기타</label>
-                            <input type="text">
+                            <input type="text" class="fixed-value">
                         </div>
                     </div>
                     <div class="conts-header vertical-info">
@@ -523,7 +523,7 @@
                         <div class="chk-box">
                             <input type="checkbox" id="22">
                             <label for="22">기타</label>
-                            <input type="text">
+                            <input type="text" class="fixed-value">
                         </div>
                         <div class="layer-agree-input-group">
                             <label for="date">구체적으로 수강 시기를 결정하신 경우, 수강 시작 날짜(또는 월)를 적어주세요.</label>
@@ -574,7 +574,7 @@
                         <div class="chk-box">
                             <input type="checkbox" id="32">
                             <label for="32">기타</label>
-                            <input type="text">
+                            <input type="text" class="fixed-value">
                         </div>
                     </div>
                     <div class="conts-header vertical-info">
@@ -609,7 +609,7 @@
                         <div class="chk-box">
                             <input type="checkbox" id="39">
                             <label for="39">기타</label>
-                            <input type="text">
+                            <input type="text" class="fixed-value">
                         </div>
                     </div>
                     <div class="layer-btn-wrap">
