--- a/work/LAP_100.html
+++ b/work/LAP_100.html
@@ -295,65 +295,42 @@
         </div>
     </footer>
     <div class="layer-pop" data-pop="pop-1">
-        <div class="layer-content" style="--max-width: 840px">
+        <div class="layer-content">
             <div class="layer-scroll">
                 <span class="title">평생교육이용권 홈페이지 이용약관</span>
                 <div class="info-area">
-                    <div class="agree-box">
-                        <h3>제 1장 총칙</h3>
-                        <div class="agree-detail">
-                            <h4>제 1조 (목적)</h4>
-                            <ol>
-                                <li>
-                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
-                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
-                                </li>
-                            </ol>  
-                        </div>
-                        <div class="agree-detail">
-                            <h4>제 2조 (목적)</h4>
-                            <ol>
-                                <li>
-                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
-                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
-                                </li>
-                            </ol>  
-                        </div>
-                        <div class="agree-detail">
-                            <h4>제 3조 (목적)</h4>
-                            <ol>
-                                <li>
-                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
-                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
-                                </li>
-                            </ol>  
-                        </div>
-                        <div class="agree-detail">
-                            <h4>제 4조 (목적)</h4>
-                            <ol>
-                                <li>
-                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
-                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
-                                </li>
-                            </ol>  
-                        </div>
-                        <div class="agree-detail">
-                            <h4>제 17조 면책</h4>
-                            <ol>
-                                <li>‘NILE’이 천재지변 또는 불가피한 사정으로 ‘서비스’를 중단할 경우, ‘회원＇에게 발생되는 문제에 대해 책임을 지지 않습니다.</li>
-                            </ol>  
-                        </div>
-                        <div class="agree-detail">
-                            <h4>제 18조 (관할법원)</h4>
-                            <ol>
-                                <li>‘서비스’이용과 관련하여 소송이 제기될 경우 ‘NILE’의 소재지를 관할하는 법원 또는 대한민국의 민사소송법에 따른 법원을 관할법원으로 합니다. 본 약관의 해석과 적용 및 본 약관과 관련한 분쟁의 해결에는 대한민국법이 적용됩니다.</li>
-                            </ol>  
-                        </div>
-                        <div class="agree-detail">
-                            <h4>제 19조 (법원)</h4>
-                            <ol>
-                                <li>‘서비스’이용과 관련하여 소송이 제기될 경우 ‘NILE’의 소재지를 관할하는 법원 또는 대한민국의 민사소송법에 따른 법원을 관할법원으로 합니다. 본 약관의 해석과 적용 및 본 약관과 관련한 분쟁의 해결에는 대한민국법이 적용됩니다.</li>
-                            </ol>  
+                    <div class="layer-agree-box layer-scroll-box txt-indent-20">
+                        <div class="layer-agree-body">
+                            <div class="layer-agree-header">
+                                <h3>제 1장 총칙</h3>
+                            </div>
+                            <div class="agree-detail">
+                                <h4>제 1조 (목적)</h4>
+                                <ol>
+                                    <li>
+                                        이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 
+                                        제공하는 모든 회원정보 서비스(이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇
+                                        의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 
+                                        그 목적으로 합니다.
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="agree-detail">
+                                <h4>제 17조 (면책)</h4>
+                                <ol>
+                                    <li>
+                                        ‘서비스’이용과 관련하여 소송이 제기될 경우 ‘NILE’의 소재지를 관할하는 법원 또는 대한민국의 민사소송법에 따른 법원을 관할법원으로 합니다. 본 약관의 해석과 적용 및 본 약관과 관련한 분쟁의 해결에는 대한민국법이 적용됩니다.
+                                    </li>
+                                </ol>
+                            </div>
+                            <div class="agree-detail">
+                                <h4>제 18조 (관할법원)</h4>
+                                <ol>
+                                    <li>
+                                        ‘NILE’이 천재지변 또는 불가피한 사정으로 ‘서비스’를 중단할 경우, ‘회원＇에게 발생되는 문제에 대해 책임을 지지 않습니다.
+                                    </li>
+                                </ol>
+                            </div>
                         </div>
                     </div>
                     <div class="layer-btn-wrap">
