--- a/work/LAP_102.html
+++ b/work/LAP_102.html
@@ -200,7 +200,7 @@
             <li>
                 <strong>충청남도<br> 평생교육이용권 3차</strong>
                 <div class="disc">
-                    <p class="col-blue">주민등록 상 충청남도 홍성군 거주</p>
+                    <p class="col-blue font-lv4">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
                         <span class="box">1914-07-15~2005-07-15 출생</span>
@@ -218,7 +218,7 @@
             <li>
                 <strong>충청남도<br> 평생교육이용권 3차</strong>
                 <div class="disc">
-                    <p class="col-blue">주민등록 상 충청남도 홍성군 거주</p>
+                    <p class="col-blue font-lv4">주민등록 상 충청남도 홍성군 거주</p>
                     <div class="price-wrap">
                         <span class="price">100,000원</span>
                         <span class="box">1914-07-15~2005-07-15 출생</span>
