--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -313,7 +313,7 @@
             <h3>평생학습계좌 연계</h3>
         </div>
         <div class="agree-box learning">
-            <div>
+            <div class="flex-acjs">
                 <h5 class="agree-tit">평생학습계좌에 평생교육이용권 사용 결과를 등록하시겠습니까?</h5>
                 <div class="agree-radio">
                     <div class="radio-box">
