--- a/work/LIP_101.html
+++ b/work/LIP_101.html
@@ -281,9 +281,9 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">신청서구분</th>
-                            <td class="txt-l">완료 평생교육이용권</td>
-                            <th class="txt-l">연계일시</th>
+                            <th class="txt-l">연계 상태</th>
+                            <td class="txt-l">완료</td>
+                            <th class="txt-l">연계 일시</th>
                             <td class="txt-l">2024-10-11</td>
                         </tr>
                         <tr>
@@ -338,8 +338,8 @@
                             <td colspan="3" class="txt-l">
                                 <div class="filebox flex-ac">
                                     <input class="upload-name fixed-value" readonly>
-                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
-                                    <input type="file" id="file01" class="file">
+                                    <label for="file02" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file02" class="file">
                                     <button type="button" class="btns bg-blue">초기화</button>
                                 </div>
                             </td>
@@ -349,8 +349,8 @@
                             <td colspan="3" class="txt-l">
                                 <div class="filebox flex-ac">
                                     <input class="upload-name fixed-value" readonly>
-                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
-                                    <input type="file" id="file01" class="file">
+                                    <label for="file03" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file03" class="file">
                                     <button type="button" class="btns bg-blue">초기화</button>
                                 </div>
                             </td>
@@ -360,15 +360,15 @@
                             <td colspan="3" class="txt-l">
                                 <div class="filebox flex-ac">
                                     <input class="upload-name fixed-value" readonly>
-                                    <label for="file01" class="btns bg-blue">파일첨부</label> 
-                                    <input type="file" id="file01" class="file">
+                                    <label for="file04" class="btns bg-blue">파일첨부</label> 
+                                    <input type="file" id="file04" class="file">
                                     <button type="button" class="btns bg-blue">초기화</button>
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <th class="txt-l">소명자료 입력</th>
-                            <td colspan="3" class="txt-l"><button type="button" class="btns layer-btn" onclick="$('[data-pop=health-status]').show();">소명자료 입력</button></td>
+                            <td colspan="3" class="txt-l"><button type="button" class="btns bg-blue layer-btn" onclick="$('[data-pop=health-status]').show();">소명자료 입력</button></td>
                         </tr>
                     </tbody>
                 </table>
@@ -488,6 +488,9 @@
                 <li>pdf 또는 jpg 파일만 첨부가 가능합니다.</li>
                 <li>첨부된 파일은 저장 버튼 클릭 시, 한번에 저장됩니다.</li>
             </ul>
+            <div class="btns-bottom">
+                <button type="button" class="btns bg-blue">저장</button>
+            </div>
             <div class="conts-header">
                 <h3>평생학습계좌 연계</h3>
             </div>
