--- a/work/LMP_002.html
+++ b/work/LMP_002.html
@@ -157,16 +157,16 @@
                         <!-- 로그인 후 -->
                         <span class="ico after-login"></span>
                         <p class="main-info-user">
-                            <span class="user-name">김국바</span>님<br class="sm-show-800"> 환영합니다.
+                            <span class="user-name">김국바</span>님 <span class="lg-only-inline">환영합니다.</span>
                         </p>
                         <a class="personal-chk" href="LIP_001.html">개인정보<br class="sm-show-800"> 수정</a>
                     </div>
                     <div class="main-info-mo-wrap">
                         <div class="main-info-link apply-ticket">
-                            <a href="LAP_100.html">
+                            <a href="#" class="layer-btn" onclick="$('[data-pop=layer-apply]').show();">
                                 <span class="ico"></span>
                                 <div class="main-info-group">
-                                    <span class="main-info-tit">평생교육<br class="sm-show-800">이용권 신청</span>
+                                    <span class="main-info-tit">이용권 <br class="sm-show-800">신청</span>
                                 </div>
                             </a>
                         </div>
@@ -174,7 +174,7 @@
                             <a href="LUP_001.html">
                                 <span class="ico"></span>
                                 <div class="main-info-group">
-                                    <span class="main-info-tit">사용기관<br class="sm-show-800">안내</span>                            
+                                    <span class="main-info-tit">사용기관 <br class="sm-show-800">안내</span>                            
                                 </div>
                             </a>
                         </div>
@@ -247,15 +247,15 @@
                         </span>
                         <span class="ico"></span>
                     </a>
-                    <a href="LNP_200.html" class="more-link-qna">
-                        <span class="more-link-one">
-                            온라인 상담
-                        </span>
-                        <span class="ico"></span>
-                    </a>
                     <a href="LNP_100.html" class="more-link-archive">
                         <span class="more-link-one">
                             자료실
+                        </span>
+                        <span class="ico"></span>
+                    </a>
+                    <a href="LNP_200.html" class="more-link-qna">
+                        <span class="more-link-one">
+                            온라인 상담
                         </span>
                         <span class="ico"></span>
                     </a>
@@ -477,7 +477,7 @@
             </div>
         </div>
     </footer>
-    <div class="layer-pop" data-pop="pop-1">
+    <div class="layer-pop" data-pop="layer-apply">
         <div class="layer-content layer-apply-content" style="--max-width: 640px">
             <div class="layer-scroll">
                 <div class="info-area layer-apply-yes layer-apply mt-0">
@@ -488,13 +488,14 @@
                         클릭하여 사업내용을 충분히 숙지하신 후 신청 바랍니다
                     </p>
                     <div class="layer-btn-wrap">
-                        <button class="btns" onclick="$('[data-pop=pop-1]').hide();">확인</button>
+                        <button class="btns" onclick="window.location.href='LAP_100.html'">확인</button>
                     </div>
                 </div>
-                <button class="close-btn" onclick="$('[data-pop=pop-1]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
+                <button class="close-btn" onclick="$('[data-pop=layer-apply]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
             </div>
         </div>
     </div>
+    <!-- 신청 기간 아닐 시 팝업 (trigger X) -->
     <div class="layer-pop" data-pop="pop-2">
         <div class="layer-content layer-apply-content" style="--max-width: 640px">
             <div class="layer-scroll">
