--- a/work/ILP_001.html
+++ b/work/ILP_001.html
@@ -226,13 +226,15 @@
                             <h4>제 1조 (목적)</h4>
                             <ol>
                                 <li>
-                                    이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
-                                    (이하 ‘서비스‘)를 이용하는 고객(이하＇회원‘)과 ‘당 사이트＇가 ‘서비스＇의 이용에 관한 사항을 전기통신사업법 및 동법 시행령, ‘개인정보처리방침’에서 정하는 바를 준수하고 약정하는 것을 그 목적으로 합니다.
+                                    이 약관은 국가평생교육진흥원(이하 'NILE')이 운영하는 평생교육바우처 지원 시스템(이하 ‘당 사이트’)이 
+                                    제공하는 모든 회원정보 서비스(이하 '서비스')를 이용하는 고객(이하 ‘회원’)과 ‘당 사이트’가 ‘서비스’의 
+                                    이용에 관한 사항을 전기통신사업법 및 동법 시행령, '개인정보처리방침'에서 정하는 바를 준수하고 약정하는 
+                                    것을 그 목적으로 합니다.
                                 </li>
                             </ol>  
                         </div>
                         <div class="agree-detail">
-                            <h4>제 2조 (목적)</h4>
+                            <h4>제 2조 (약관의 효력과 변경)</h4>
                             <ol>
                                 <li>
                                     이 약관은 국가평생교육진흥원(이하 ‘NILE’)이 운영하는 평생교육이용권 지원 시스템(이하 “당 사이트“)이 제공하는 모든 회원정보 서비스
