--- a/work/LAP_401.html
+++ b/work/LAP_401.html
@@ -434,17 +434,75 @@
                                 <h3>저작권의 양도 내용</h3>
                                 <h4>제 1조(공통)</h4>
                                 <ol>
-                                    <li>①’양도자’는 본 양도 동의 후 ‘양도자‘가 제작한 공모전 입상작에 대한 저작재산권 일체(복제권, 공연권, 공중송신권, 전시권, 배포권, 대여권 등) 및 2차 저작물 작성권을 ‘양수자‘에게 양도한다.
+                                    <li>①’양도자’는 본 양도 동의 후 ‘양도자‘가 제작한 공모전 입상작에 대한 저작재산권 일체(복제권, 공연권, 공중송신권, 전시권, 배포권, 대여권 등) 및 2차 저작물 작성권을 ‘양수자‘에게 양도한다.</li>
+                                    <li>
+                                        ②제1항의 규정에도 불구하고 ‘양도자’는 본 동의 상의 저작물을 자유롭게 이용할 수 있다.
+                                    </li>
+                                </ol>
+                                <h4>제2조(양도비용)</h4>
+                                <ol>
+                                    <li>양도비용은 ‘년 평생교육이용권 이용자 우수사례 수기 공모전‘ 시상금으로 갈음한다.</li>
+                                </ol>
+                                <h4>제 3조(확인 및 보증)</h4>
+                                <ol>
+                                    <li>
+                                        ‘양도자‘가 본 ‘년 평생교육이용권 이용자 우수사례 수기 공모전‘에 응모하기 위하여 제3자의 저작물을 이용한 경우 
+                                        제3자에게 저작재산권을 양도받거나 이용 허락을 받음으로써 양수자가 해당 산출물을 이용함에 있어서 법적 또는 기술적 
+                                        문제가 발생하지 않도록 하여야 하며, 제3자와 저작권에 대하여 문제가 발생할 때에는 ‘양도자‘가 이에 대한 법적 책임을 진다.
+                                    </li>
+                                </ol>
+                                <h4>제 4조(저작재산권의 이전등록)</h4>
+                                <ol>
+                                    <li>
+                                        ‘양도자’는 본 저작물에 대한 저작재산권의 이전등록을 할 수 있으며, ‘양수자‘의 요청이 있는 경우 ‘양도자‘는 등록에 필요한 
+                                        서류 등을 지체 없이 제공하는 등 일체의 협력을 다하여야 한다.
+                                    </li>
+                                </ol>
+                                <h4>제 5조(초상권)</h4>
+                                <ol>
+                                    <li>
+                                        본 ‘년 평생교육이용권 이용자 우수사례 수기 공모전‘응모의 결과로 창작된 저작물 등에 특정인물의 초상이 포함된 경우(제작에 협력할 것을 약정하지 아니한 자가 
+                                        출연하는 경우를 포함한다), ‘양도자’는 그 촬영에 관한 동의(해당 저작물의 제3자 이용에 관한 사항을 포함한다)를 득하여야 하며, 해당 저작물의 이용에 관하여 
+                                        민·형사상 분쟁이 발생할 경우 ‘양도자‘가 이에 대한 법적 책임을 진다.
+                                    </li>
+                                </ol>
+                                <h4>제 6조(저작인격권 유보)</h4>
+                                <ol>
+                                    <li>
+                                        양수자 및 저작권법 제24조 2의 공공저작물을 자유롭게 이용하는 제3자가 해당 양도된 저작물을 활용함에 있어서 그 행위의 성질 및 정도에 비추어 사회통념상 
+                                        저작자의 명예를 훼손하는 경우가 아닌 한 ‘양도자’는 저작인격권을 행사하는 데 있어서 그 권리가 유보(제한)된다.
+                                    </li>
+                                </ol>
+                                <h4>제 7조(저작인접권)</h4>
+                                <ol>
+                                    <li>
+                                        ‘양도자‘는 본 ‘년 평생교육이용권 이용자 우수사례 수기 공모전‘ 응모의 결과로 창작된 저작물에 실연자가 있는 경우 저작권법에 따른 복제권, 배포권, 대여권, 
+                                        공연권, 방송권, 전송권의 양도에 대하여 저작인접권자로부터 동의를 받아야 하며, ‘양도자‘가 방송사업자의 실연자 및 디지털음성송신사업자의 실연자, 상업용 
+                                        음반을 사용하여 공연하는 자의 실연자에 대하여 보상해야 할 경우 전부 보상했음을 확인한다.
+                                    </li>
+                                </ol>
+                                <h4>제 8조(저작자의 권리변동사항)</h4>
+                                <ol>
+                                    <li>
+                                        ‘양도자‘는 본 동의 이전에 위 저작물에 대하여 제3자에게 질권을 설정하였거나 저작재산권의 일부 또는 전부를 양도·이용허락을 한 사실이 있어서는 아니되며, 
+                                        이로 인해 손해가 발생하였을 경우 ‘양도자‘는 배상할 책임을 진다.
+                                    </li>
+                                </ol>
+                                <h4>제 9조(분쟁해결 및 관할법원)</h4>
+                                <ol>
+                                    <li>①본 합의와 관련하여 분쟁이나 이견이 발생할 경우 ‘양도자‘와 ‘양수자’는 제소에 앞서 한국저작권위원회의 조정을 받도록 한다. 조정에 이견이 있어, 소송이 제기될 경우에는 서울중앙지방법원을 제1심 관할법원으로 한다.</li>
+                                </ol>
+                                <h4>제 10조(합의의 해제)</h4>
+                                <ol>
+                                    <li>
+                                        ①’양도자’ 또는 ‘양수자’는 다음과 같은 사유가 발생한 경우 본 합의를 해제할 수 있다.
                                         <ul class="num-counter">
                                             <li>자신 또는 상대방에 대하여 주요재산에 대한 보전처분결정 및 강제집행, 국세 또는 지방세의 체납절차, 회사정리, 기타 본 계약을 수행하기 어려운 중대한 사유가 발생하는 경우</li>
                                             <li>상대방이 정당한 사유 없이 본 합의 또는 합의에 따라 별도로 체결한 합의에서 정한 사항을 위반하여, 서면으로 그 이행을 최고하고, 그 후 상당기간을 정하여 그 이행 또는 시정을 요구하였는데도 불구하고 상대방이 이행하지 않는 경우</li>
                                             <li>저작물의 내용에 심각한 하자가 있거나 타인의 권리를 침해하여 저작권을 양수하는 자에게 손해가 발생하는 경우</li>
                                         </ul>
                                     </li>
-                                </ol>
-                                <h4>제2조(양도비용)</h4>
-                                <ol>
-                                    <li>양도비용은 ‘년 평생교육이용권 이용자 우수사례 수기 공모전‘ 시상금으로 갈음한다.</li>
+                                    <li>②합의의 해제에 대한 통보는 반드시 서면으로 하여야 하며, 본 합의의 해제는 상대방에 대한 손해배상의 청구에 영향을 미치지 아니한다.</li>
                                 </ol>
                             </div>
                         </div>
