헤더 , 알림톡 추가

--- a/work/LAP_103.html
+++ b/work/LAP_103.html
@@ -68,6 +68,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -110,16 +111,11 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
                                 <li><a href="LAP_300.html">선정 취소 신청</a></li>
                                 <li><a href="LAP_400.html">수기 공모 신청</a></li>
-                            </ul>
-                        </div>
-                        <div class="sm-sub-menu">
-                            <span class="sm-menu-tit">우수이용자 신청</span>
-                            <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
@@ -134,7 +130,9 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
                                 <li><a href="#">교육이수정보</a></li>
@@ -624,10 +622,48 @@
         </div>
     </div>
     <div class="layer-pop" data-pop="message-auth">
-        <div class="layer-content" style="--max-width: 640px;">
+        <div class="layer-content">
             <div class="layer-scroll">
                 <span class="title">알림톡(문자) 인증</span>
-                <div class="certi-num-area message info-area">
+                <div class="info-area">
+                    <div class="com-write-table">
+                        <table>
+                            <caption>알림톡 문자인증</caption>
+                            <colgroup>
+                                <col style="width: 190px;">
+                                <col>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th class="txt-l">
+                                        <label for="certiNumSend">휴대전화번호</label>       
+                                    </th>
+                                    <td>
+                                        <div class="flex-ac">
+                                            <input type="number">
+                                            <button class="btns bg-blue">전송</button>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th class="txt-l">
+                                        <label for="certiNumReceive">인증번호</label>
+                                    </th>
+                                    <td>
+                                        <input type="number" placeholder="전송된 인증번호를 입력해주세요" class="w-100" id="certiNumReceive">
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <p class="bullet">인증번호는 카카오 알림톡으로 우선 전송되며 카카오톡 미사용자에게는 문자로 전송됩니다</p>
+                    <div class="layer-btn-wrap">
+                        <button class="btns layer-close" onclick="$('[data-pop=message-auth]').hide();">
+                            확인
+                        </button>
+                    </div>
+                </div>
+                <!-- <div class="certi-num-area message info-area">
                     <div class="certi-input-group">
                         <label for="certiNumSend">휴대전화번호</label>
                         <div class="certi-num-send">
@@ -650,7 +686,7 @@
                             확인
                         </button>
                     </div>
-                </div>
+                </div> -->
                 <button class="close-btn" onclick="$('[data-pop=message-auth]').hide();"><span class="blind">레이어 팝업 닫기</span></button>
             </div>
         </div>
