--- a/work/LAP_113.html
+++ b/work/LAP_113.html
@@ -20,7 +20,51 @@
         <div class="new-window-content">
             <div class="new-window-scroll">
                 <span class="title">자격검증</span>
-                <div class="info-area auth-res">
+                <div class="info-area">
+                    <div class="com-view-table">
+                        <table>
+                            <caption>자격검증</caption>
+                            <colgroup>
+                                <col style="width: 190px;">
+                                <col>
+                            </colgroup>
+                            <tbody>
+                                <tr>
+                                    <th class="txt-l">성명</th>
+                                    <td class="txt-l">홍길동</td>
+                                </tr>
+                                <tr>
+                                    <th class="txt-l">주민등록번호</th>
+                                    <td class="txt-l">991218-1******</td>
+                                </tr>
+                                <tr>
+                                    <th class="txt-l">평생교육이용권 유형</th>
+                                    <td class="txt-l">
+                                        <div class="radio-wrap">
+                                            <div class="radio-box">
+                                                <input type="radio" name="r" id="reg" checked>
+                                                <label for="reg">지역특화</label>
+                                            </div>
+                                            <div class="radio-box">
+                                                <input type="radio" name="r" id="dig">
+                                                <label for="dig">디지털</label>
+                                            </div>
+                                            <div class="radio-box">
+                                                <input type="radio" name="r" id="old">
+                                                <label for="old">노인</label>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>    
+
+
+
+
+                <!-- <div class="info-area auth-res">
                     <div class="border-box-20">
                         <div class="data-list">
                             <dl>
@@ -77,7 +121,7 @@
                     <div class="new-window-btn-wrap">
                         <button class="btns" onclick="window.close()">확인</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
