--- a/work/LIP_101.html
+++ b/work/LIP_101.html
@@ -75,6 +75,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -122,12 +123,6 @@
                                 <li><a href="#">선정 취소 신청</a></li>
                                 <li><a href="#">수기 공모 신청</a></li>
                             </ul>
-                        </div>
-                        <div class="sm-sub-menu">
-                            <span class="sm-menu-tit">우수이용자 신청</span>
-                            <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
-                            </ul>
                         </div> 
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">게시판</span>
@@ -141,7 +136,9 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#">평생교육이용권 이용내역</a></li>
                                 <li><a href="#">교육이수정보</a></li>
@@ -269,7 +266,6 @@
                 <h3>건강보험 가입현황</h3>
                 <small><em class="col-red">*</em> 는 필수사항입니다.</small>
             </div>
-
             <div class="com-view-table lg-only">
                 <table>
                     <caption>건강보험 가입현황 테이블</caption>
