--- a/work/LAP_100.html
+++ b/work/LAP_100.html
@@ -68,6 +68,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -83,12 +84,11 @@
                 <div class="sm-menu-in">
                     <div class="sm-menu-header">
                         <!-- 로그인 전 -->
-                        <a href="#" class="txt-bold">로그인</a>
+                        <!-- <a href="#" class="txt-bold">로그인</a> -->
                         <!-- 로그인 후 -->
-                        <!-- <p class="sm-info-user">
-                            
+                        <p class="sm-info-user">
                             <span class="user-name txt-bold">김국바</span>님 환영합니다
-                        </p> -->
+                        </p>
                         <button class="sm-close ico">
                             <span class="blind">닫기</span>
                         </button>
@@ -110,16 +110,11 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
                                 <li><a href="LAP_300.html">선정 취소 신청</a></li>
                                 <li><a href="LAP_400.html">수기 공모 신청</a></li>
-                            </ul>
-                        </div>
-                        <div class="sm-sub-menu">
-                            <span class="sm-menu-tit">우수이용자 신청</span>
-                            <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
@@ -134,7 +129,9 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
                                 <li><a href="#">교육이수정보</a></li>
@@ -711,7 +708,7 @@
     <div class="layer-pop" data-pop="pop-3">
         <div class="layer-content" style="--max-width: 1200px">
             <div class="layer-scroll">
-                <span class="title">평생교육이용권 사용기관 신청을 위한 개인정보 수집 · 이용 동의서(선택)</span>
+                <span class="title">평생교육이용권 사용기관 신청을 위한 개인정보 수집 · 이용 동의(선택)</span>
                 <div class="info-area">
                     <p class="desc">
                         평생교육이용권 홈페이지에서 제공하는 인터넷 관련 서비스를 원활하게 수행하기 위하여 개인정보의 수집,유출,오용,남용으로부터 사생활의 비밀 등을 보호하도록 한 
