--- a/work/LIP_601.html
+++ b/work/LIP_601.html
@@ -69,6 +69,7 @@
                         <span class="tit">마이페이지</span>
                         <div class="link-item">
                             <a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a>
                             <a href="LIP_100.html">평생교육이용권 신청내역</a>
                             <a class="hidden" href="#">평생교육이용권 이용내역</a>
                             <a href="LIP_300.html">교육이수정보</a>
@@ -111,16 +112,11 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">평생교육이용권</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_100.html">평생교육이용권신청</a></li>
+                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                                 <li><a href="#" class="hidden">이의제기신청</a></li>
                                 <li><a href="LAP_300.html">선정 취소 신청</a></li>
                                 <li><a href="LAP_400.html">수기 공모 신청</a></li>
-                            </ul>
-                        </div>
-                        <div class="sm-sub-menu">
-                            <span class="sm-menu-tit">우수이용자 신청</span>
-                            <ul class="sm-sub-list">
-                                <li><a href="LAP_001.html">우수이용자 신청</a></li>
                             </ul>
                         </div> 
                         <div class="sm-sub-menu">
@@ -135,7 +131,9 @@
                         <div class="sm-sub-menu">
                             <span class="sm-menu-tit">마이페이지</span>
                             <ul class="sm-sub-list">
-                                <li><a href="LIP_001.html">개인정보수정</a></li>
+                                <li><a href="LIP_001.html">개인정보수정</a>
+                            <a href="LIP_601.html">개명 및 개번 신청</a></li>
+                                <li><a href="LIP_601.html">개명 및 개번 신청</a></li>
                                 <li><a href="LIP_100.html">평생교육이용권 신청내역</a></li>
                                 <li><a href="#" class="hidden">평생교육이용권 이용내역</a></li>
                                 <li><a href="#">교육이수정보</a></li>
